tests/test_input_files/good/test_good_assign_op_2.punkt
main {
	var x = 1.
	print x.
	x -= 1.
	print x.
}
