tests/test_input_files/bad/test_bad_array_18.punkt
main {
	var a = 5.
	var x = sizeof a.
}
